crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_add_any.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 2
kids:
  - a-key
  - z-key
ktys:
  - oct
  - RSA
