crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_empty.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 0
kids: []
ktys: []
