crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_mixed_public_private.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 2
kids:
  - key-a
  - key-b
ktys:
  - oct
  - RSA
