crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_push_methods.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 3
kids:
  - any-key
  - priv-key
  - pub-key
ktys:
  - OKP
  - oct
  - EC
