crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_sorts_by_kid.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 3
kids:
  - alpha
  - bravo
  - charlie
ktys:
  - EC
  - OKP
  - RSA
