crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__builder_stable_duplicate_kids.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: snapshot_from_builder(builder)
---
key_count: 3
kids:
  - same
  - same
  - same
ktys:
  - RSA
  - EC
  - OKP
