crates/uselesskey-core-jwk-builder/tests/snapshots/snapshots_jwk_builder__snapshot_builder_public_and_private_mixed.snap
---
source: crates/uselesskey-core-jwk-builder/tests/snapshots_jwk_builder.rs
expression: redacted
---
keys:
  - alg: ES256
    crv: P-256
    kid: ec-pub
    kty: EC
    use: sig
    x: "[REDACTED]"
    y: "[REDACTED]"
  - alg: HS256
    k: "[REDACTED]"
    kid: hmac-key
    kty: oct
    use: sig
  - alg: RS256
    e: "[REDACTED]"
    kid: rsa-pub
    kty: RSA
    n: "[REDACTED]"
    use: sig
